# smart-home-system

./: .gitignore  Python后端重构方案.md  项目启动与Git协作流程.md
backend/: .env.example  CMakeLists.txt  README.md  config.example.json  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  permissions.py  security.py
backend/app/models/: home.py  operation_log.py  system_config.py  user.py
backend/app/repositories/: entities.py  mysql_placeholder.py
backend/app/schemas/: auth.py  log.py  member.py
backend/app/services/: auth_service.py  home_service.py  member_service.py  operation_log_service.py  permission_service.py  system_config_service.py  user_service.py
backend/app/utils/: response.py  time.py
backend/include/controllers/: AuthController.h  HomeController.h  MemberController.h  SystemConfigController.h  UserController.h
backend/include/dto/: AuthDto.h  HomeDto.h  MemberDto.h  SystemConfigDto.h
backend/include/models/: Home.h  HomeMember.h  OperationLog.h  SystemConfig.h  User.h
backend/include/repositories/: HomeRepository.h  MemberRepository.h  MockHomeRepository.h  MockMemberRepository.h  MockOperationLogRepository.h  MockSystemConfigRepository.h  MockUserRepository.h  OperationLogRepository.h  SystemConfigRepository.h  UserRepository.h
backend/include/services/: AuthService.h  HomeService.h  MemberService.h  OperationLogService.h  PermissionService.h  SystemConfigService.h
backend/include/utils/: ApiResponse.h  ErrorCode.h  (+6 more)
backend/scripts/: smoke_test.py
backend/src/: main.cpp
backend/tests/: README.md  test_hanzhe_api.py
(+235 files in other folders)
